k8s/deployment-insurance-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: insurance
spec:
  replicas: 3
  selector:
    matchLabels:
      app: insurance
  template:
    metadata:
      labels:
        app: insurance
    spec:
      containers:
      - name: jason-insurance
        image: jason-insurance:latest
        ports:
        - containerPort: 80
