k8s/service-insurance-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: insurance-service
spec:
  type: ClusterIP  # Default type, suitable for internal access. Use LoadBalancer for external access in cloud environments
  ports:
  - port: 80  # The port the service will be exposed on
    targetPort: 80  # The target port on the pod to route the traffic to
  selector:
    app: insurance  # Selects the pods with this label to route traffic to
